@@ -1,6 +1,10 @@
 2007-03-25  Inge Wallin  <ingwa@c83-252-238-97.bredband.comhem.se>
 
 	Qt3 -> Qt4
+	* dialogs/KCConfigSubtypePage.cc (KChartHiloSubTypeChartPage): 
+	Q3ButtonGroup -> QGroupBox, QButtonGroup
+
+	Qt3 -> Qt4
 	* dialogs/KCConfigSubtypePiePage.cc (KCConfigSubtypePiePage): 
 	Q3ButtonGroup -> QGroupBox
 
